Final version pitch presentation

--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@ Marc Arroyo
 <h1>Shiny App &amp; Reproducible Pitch</h1>
 <h3 id="course-project-objectives">Course Project Objectives</h3>
 <p>1.- Create a Shiny App. This App has to have some form of input, some operations in the server with this input, and an output result of this operations.</p>
-<p>2.- Deploy the application on Rstudio’s shiny server.</p>
-<p>3.- A reproducible pitch presentation pushed to Github or RPubs.</p>
-<p>4.- Share the code of both, App and Presentation pitch on Github.</p>
+<p>2.- Deploy the application on Rstudio’s shiny server. <strong><a href="https://marc-arroyo.shinyapps.io/who_covid_impact/">App HERE</a></strong></p>
+<p>3.- A reproducible pitch presentation pushed to Github or RPubs. <strong><a href="https://marroyopa.github.io/DDP_Week4_Assignment/index.html">Presentation HERE</a></strong></p>
+<p>4.- Share the code of both, App and Presentation pitch on Github. <strong><a href="https://github.com/marroyopa/DDP_Week4_Assignment/tree/gh-pages">Github repo HERE</a></strong></p>
 <h3 id="proposed-solution">Proposed Solution</h3>
 <p>Our proposed solution is a Shiny App to compare Covid-19 infections or deaths between two countries or two regions of the world. Data is directly loaded from the World Health Organization website.</p>
 <p>Based on the user selections the App presents daily and accumulated graphs in Daily and Accumulated tabs. There is also an Instructions tab to guide the user.</p>
