Final version pitch presentation

--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@ list-style-type: none;
 <body>
 <div class="slide titlepage">
   <h1 class="title">DDP_Week4_Assignment</h1>
+  <h1 class="subtitle">Covid-19 Impact Comparison</h1>
   <p class="author">
 Marc Arroyo
   </p>
